API viewer: Styling

--- a/src/main/resources/static/law-ref-gui.css
+++ b/src/main/resources/static/law-ref-gui.css
@@ -1,5 +1,48 @@
-body {
-    background-color: aquamarine;
+
+/* :: Colors */
+.law {
+    background-color: lightgray;
 }
-html {
+.law-chapter {
+    background-color: #ffc9a7;
+}
+.law-chapter:hover {
+    background-color: #ffa97b;
+}
+.law-chapter-paragraph {
+    background-color: #fff57d;
+}
+.law-chapter-paragraph:hover {
+    background-color: #ffee3f;
+}
+.law-chapter-paragraph-section {
+    background-color: aqua;
+}
+.law-chapter-paragraph-section:hover {
+    background-color: #07ccff;
+}
+
+/* :: Other styling */
+.law-chapter {
+    padding-top: 0.2em;
+    padding-left: 0.4em;
+    padding-bottom: 0.4em;
+    margin-left: 0.5em;
+}
+.law-chapter-paragraph {
+    padding-top: 0.2em;
+    padding-left: 0.4em;
+    margin-left: 0.5em;
+}
+.law-chapter-paragraph-section {
+    padding-bottom: 0.4em;
+    padding-top: 0.2em;
+    padding-left: 0.4em;
+    margin-left: 0.5em;
+}
+
+.law h1,
+.law h2,
+.law h3 {
+    margin: 0.3em;
 }
