--- a/src/main/resources/templates/law-ref-gui.html
+++ b/src/main/resources/templates/law-ref-gui.html
@@ -10,11 +10,10 @@
 <!--
 <p th:text="'Hello, ' + ${name} + '!'" />
 -->
+Search for law: <input type="text" id="law-ref-search">
+<span id="law-ref-result-info" style="margin-left: 2em;"></span>
 
-<input type="text" id="law-ref-search">
-<span id="law-ref-result-info"></span>
-
-<div id="law-ref-result"></div>
+<div id="law-ref-result" style="margin-top: 1em;"></div>
 
 </body>
 </html>
