Law: Reading and matching NumberedSentences ("bokstav b")

--- a/src/main/resources/static/law-ref-gui.css
+++ b/src/main/resources/static/law-ref-gui.css
@@ -24,6 +24,9 @@
 .law-chapter-paragraph-section-sentence {
     background-color: lightsteelblue;
 }
+.law-chapter-paragraph-section-numbered-sentence {
+    background-color: #deb8d3;
+}
 
 /* :: Other styling */
 .law-chapter {
