GUI: Text change

--- a/src/main/resources/templates/law-ref-gui.html
+++ b/src/main/resources/templates/law-ref-gui.html
@@ -10,7 +10,7 @@
 <!--
 <p th:text="'Hello, ' + ${name} + '!'" />
 -->
-Search for law: <input type="text" id="law-ref-search">
+Search for law, or inside law: <input type="text" id="law-ref-search">
 <span id="law-ref-result-info" style="margin-left: 2em;"></span>
 
 <div id="law-ref-result" style="margin-top: 1em;"></div>
